# firm-plugins

./: .gitignore  README.md
.claude-plugin/: marketplace.json
.github/: fleet-repos.txt
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  epic.yml  feature.yml
.github/workflows/: claude-implement.reusable.yml  claude-review.reusable.yml  coverage-audit.yml  freshness-audit.yml  release.yml  template-tests.yml
docs/: SETUP-AND-USAGE.md  STARTER-KIT.md
plugins/dev-lifecycle/.claude-plugin/: plugin.json
plugins/dev-lifecycle/assets/issue-templates/: bug.yml  config.yml  epic.yml  feature.yml
plugins/dev-lifecycle/assets/workflows/: claude-review.yml  claude.yml  epic-checkoff.yml  security.yml
plugins/dev-lifecycle/references/: compatibility-matrix.md
plugins/dev-lifecycle/references/accessibility/: wcag-checklist.md
plugins/dev-lifecycle/references/authoring/: documentation-standard.md
plugins/dev-lifecycle/references/backend/: anthropic.md  celery.md  drf.md  pandas.md  redis.md  slack-bolt.md  stripe.md  websockets.md
plugins/dev-lifecycle/references/devops/: kubernetes.md  uv.md
plugins/dev-lifecycle/references/performance/: load-testing.md  perf-checklist.md  perf-surfaces.md
plugins/dev-lifecycle/references/recipes/: analytics.md  background-jobs.md  gdpr-data-rights.md  llm-features.md  push-notifications.md  seo-meta-sitemap.md  social-login.md
plugins/dev-lifecycle/references/wiring/: api-client-generation.md  frontend-backend-contract.md  infra-app.md  mobile-backend.md
plugins/dev-lifecycle/skills/accessibility-audit/: SKILL.md
plugins/dev-lifecycle/skills/client-comms/: SKILL.md
plugins/dev-lifecycle/skills/code-review/: SKILL.md
plugins/dev-lifecycle/skills/coding-session/: SKILL.md
plugins/dev-lifecycle/skills/data/: SKILL.md
plugins/dev-lifecycle/skills/design-system/: SKILL.md
plugins/dev-lifecycle/skills/devops/: SKILL.md
plugins/dev-lifecycle/templates/: _TEMPLATE-README.md
plugins/dev-lifecycle/templates/frontend/django-htmx/: README.md  pyproject.toml
plugins/dev-lifecycle/templates/frontend/django-htmx/docs/: fragment.md
plugins/dev-lifecycle/templates/frontend/django-htmx/static_src/: input.css
plugins/dev-lifecycle/templates/frontend/django-htmx/templates/webapp/: base.html  home.html  login.html
plugins/dev-lifecycle/templates/frontend/django-htmx/templates/webapp/items/: list.html
plugins/dev-lifecycle/templates/frontend/django-htmx/templates/webapp/partials/: _item_create_form.html  _item_list.html  _item_row.html  _login_form.html
plugins/dev-lifecycle/templates/frontend/django-htmx/tests/: conftest.py  settings_test.py  test_auth_views.py  test_items_views.py  urls.py
plugins/dev-lifecycle/templates/frontend/django-htmx/webapp/: __init__.py  auth.py  context_processors.py  cookies.py  decorators.py  forms.py  middleware.py  urls.py  views.py
plugins/dev-lifecycle/templates/worker/celery/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
plugins/dev-lifecycle/templates/worker/celery/app/: __init__.py  celery_app.py  health.py  registry.py
plugins/dev-lifecycle/templates/worker/celery/app/core/: __init__.py  logging.py  settings.py
plugins/dev-lifecycle/templates/worker/celery/app/core/db/: __init__.py  task_session.py
plugins/dev-lifecycle/templates/worker/celery/app/tasks/: __init__.py  base.py  example.py
plugins/dev-lifecycle/templates/worker/celery/docs/: fragment.md
plugins/dev-lifecycle/templates/worker/celery/tests/: conftest.py  test_celery_app.py  test_health.py  test_registry.py  test_tasks.py
scripts/: validate_plugin.py
(+130 files in other folders)
