[project]
name = "worker-block"
version = "0.1.0"
description = "Celery worker block: app factory, beat scheduler, task conventions, Redis broker/result backend."
requires-python = ">=3.13,<3.14"
dependencies = [
  # Pins mirror references/compatibility-matrix.md's Backend — Python row
  # (this block's `versions-pinned-to` target — see README.md). The
  # [redis] extra pulls in redis-py as the broker/result-backend transport
  # — deliberately NOT also pinned directly here: celery 5.6.x's own
  # `kombu[redis]` dependency constrains redis-py to <6.5 (Celery has not
  # yet certified redis-py 8.x), so a separate direct `redis==8.0.*` pin
  # (references/backend/redis.md's own general "5.x-8.x, one API surface"
  # pin) is UNSATISFIABLE against celery[redis]==5.6.*. Let celery's own
  # extra resolve the compatible redis-py line; re-check this constraint
  # when celery.md's own "Version check" section bumps past 5.6.
  "celery[redis]==5.6.*",
  # Same settings/DB stack the backend blocks pin, so a worker built
  # against the same DATABASE_URL resolves identically.
  "pydantic==2.13.*",
  "pydantic-settings==2.14.*",
  "sqlalchemy[asyncio]==2.0.*",
  "asyncpg==0.31.*",
]

[dependency-groups]
dev = [
  "pytest==9.1.*",
  "pytest-asyncio==1.4.*",
  # fakeredis for fast unit tests without a real broker (references/backend/
  # redis.md's "Celery, testing" section).
  "fakeredis==2.32.*",
  "aiosqlite==0.22.*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
